Bug 25635 - [4.0/4.1/4.2 regression] Bogus cruft in error message for invalid operator declaration
Summary: [4.0/4.1/4.2 regression] Bogus cruft in error message for invalid operator de...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.2.0
: P3 normal
Target Milestone: 4.0.3
Assignee: Mark Mitchell
URL:
Keywords: diagnostic, monitored
Depends on:
Blocks:
 
Reported: 2006-01-02 12:59 UTC by Volker Reichelt
Modified: 2006-07-19 10:50 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work: 3.4.0
Known to fail: 4.0.0 4.1.0 4.2.0
Last reconfirmed: 2006-01-02 16:49:19


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Reichelt 2006-01-02 12:59:43 UTC
The diagnostic for the following invalid code snippet got worse with
GCC 4.0.0:

=============================================
struct A {};

A::operator int();
=============================================

We now issue a duplicate message and some more bogus stuff:

  bug.cc:3: error: no 'A::operator int()' member function declared in class 'A'
  bug.cc:3: error: no 'A::operator int()' member function declared in class 'A'
  bug.cc:3: error: 'A::operator int()' cannot be overloaded
  bug.cc:3: error: with 'A::operator int()'
  bug.cc:3: error: declaration of 'A::operator int()' outside of class is not definition

We used to issue the following message which looks OK to me:

  bug.cc:3: error: no `A::operator int()' member function declared in class `A'
  bug.cc:3: error: declaration of `A::operator int()' outside of class is not definition

For a normal member function like "void A::foo()" the error message is OK.
Comment 1 Andrew Pinski 2006-01-02 16:49:19 UTC
Confirmed.
Comment 2 Mark Mitchell 2006-01-03 08:38:28 UTC
Subject: Bug 25635

Author: mmitchel
Date: Tue Jan  3 08:38:22 2006
New Revision: 109268

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=109268
Log:
	PR c++/25635
	* class.c (add_method): Set TYPE_HAS_CONVERSION for classes with a
	conversion operator.
	* decl.c (grokdeclarator): Do not set TYPE_HAS_CONVERSION here.
	PR c++/25638
	* class.c (add_method): Never associate more than one destructor
	with a single class.
	PR c++/25637
	* decl.c (grokdeclarator): Refine check for invalid
	declarations/definitions of member functions outside of their own
	class.
	PR c++/25633
	* parser.c (cp_parser_mem_initializer_list): Check result of
	cp_parser_mem_initializer against error_mark_node, not NULL_TREE.
	(cp_parser_mem_initializer): Return error_mark_node for failure.
	PR c++/25634
	* parser.c (cp_parser_elaborated_type_specifier): Call
	cp_parser_check_template_parameters.
	PR c++/25635
	* g++.dg/parse/operator6.C: New test.
	PR c++/25637
	* g++.dg/parse/error29.C: New test.
	PR c++/25638
	* g++.dg/parse/dtor6.C: New test.
	PR c++/25633
	* g++.dg/parse/ctor3.C: New test.
	PR c++/25634
	* g++.dg/template/class3.C: New test.

Added:
    branches/gcc-4_0-branch/gcc/testsuite/g++.dg/parse/ctor3.C
    branches/gcc-4_0-branch/gcc/testsuite/g++.dg/parse/dtor6.C
    branches/gcc-4_0-branch/gcc/testsuite/g++.dg/parse/error29.C
    branches/gcc-4_0-branch/gcc/testsuite/g++.dg/parse/operator6.C
    branches/gcc-4_0-branch/gcc/testsuite/g++.dg/template/class3.C
Modified:
    branches/gcc-4_0-branch/gcc/cp/ChangeLog
    branches/gcc-4_0-branch/gcc/cp/class.c
    branches/gcc-4_0-branch/gcc/cp/decl.c
    branches/gcc-4_0-branch/gcc/cp/parser.c
    branches/gcc-4_0-branch/gcc/testsuite/ChangeLog

Comment 3 Mark Mitchell 2006-01-03 08:40:23 UTC
Subject: Bug 25635

Author: mmitchel
Date: Tue Jan  3 08:40:18 2006
New Revision: 109269

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=109269
Log:
	PR c++/25635
	* class.c (add_method): Set TYPE_HAS_CONVERSION for classes with a
	conversion operator.
	* decl.c (grokdeclarator): Do not set TYPE_HAS_CONVERSION here.
	PR c++/25638
	* class.c (add_method): Never associate more than one destructor
	with a single class.
	PR c++/25637
	* decl.c (grokdeclarator): Refine check for invalid
	declarations/definitions of member functions outside of their own
	class.
	PR c++/25633
	* parser.c (cp_parser_mem_initializer_list): Check result of
	cp_parser_mem_initializer against error_mark_node, not NULL_TREE.
	(cp_parser_mem_initializer): Return error_mark_node for failure.
	PR c++/25634
	* parser.c (cp_parser_elaborated_type_specifier): Call
	cp_parser_check_template_parameters.
	PR c++/25635
	* g++.dg/parse/operator6.C: New test.
	PR c++/25637
	* g++.dg/parse/error29.C: New test.
	PR c++/25638
	* g++.dg/parse/dtor6.C: New test.
	PR c++/25633
	* g++.dg/parse/ctor3.C: New test.
	PR c++/25634
	* g++.dg/template/class3.C: New test.

Added:
    branches/gcc-4_1-branch/gcc/testsuite/g++.dg/parse/ctor3.C
    branches/gcc-4_1-branch/gcc/testsuite/g++.dg/parse/dtor6.C
    branches/gcc-4_1-branch/gcc/testsuite/g++.dg/parse/error29.C
    branches/gcc-4_1-branch/gcc/testsuite/g++.dg/parse/operator6.C
    branches/gcc-4_1-branch/gcc/testsuite/g++.dg/template/class3.C
Modified:
    branches/gcc-4_1-branch/gcc/cp/ChangeLog
    branches/gcc-4_1-branch/gcc/cp/class.c
    branches/gcc-4_1-branch/gcc/cp/decl.c
    branches/gcc-4_1-branch/gcc/cp/parser.c
    branches/gcc-4_1-branch/gcc/testsuite/ChangeLog

Comment 4 Mark Mitchell 2006-01-03 08:41:26 UTC
Subject: Bug 25635

Author: mmitchel
Date: Tue Jan  3 08:41:21 2006
New Revision: 109270

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=109270
Log:
	PR c++/25635
	* class.c (add_method): Set TYPE_HAS_CONVERSION for classes with a
	conversion operator.
	* decl.c (grokdeclarator): Do not set TYPE_HAS_CONVERSION here.
	PR c++/25638
	* class.c (add_method): Never associate more than one destructor
	with a single class.
	PR c++/25637
	* cp-tree.h (do_friend): Adjust prototype.
	* decl.c (grokfndecl): Make funcdef_flag a bool, not an int.
	(grokdeclarator): Likewise.  Refine check for invalid
	declarations/definitions of member functions outside of their own
	class.
	* friend.c (do_friend): Make funcdef_flag a bool, not an int.
	PR c++/25633
	* parser.c (cp_parser_mem_initializer_list): Check result of
	cp_parser_mem_initializer against error_mark_node, not NULL_TREE.
	(cp_parser_mem_initializer): Return error_mark_node for failure.
	PR c++/25634
	* parser.c (cp_parser_template_parameter_list): Call
	begin_template_parm_list and end_template_parm_list here.
	(cp_parser_type_parameter): Not here.
	(cp_parser_template_declaration_after_export): Or here.
	(cp_parser_elaborated_type_specifier): Call
	cp_parser_check_template_parameters.
	* tree.c (build_target_expr_with_type): Use force_target_expr.
	PR c++/25635
	* g++.dg/parse/operator6.C: New test.
	PR c++/25637
	* g++.dg/parse/error29.C: New test.
	PR c++/25638
	* g++.dg/parse/dtor6.C: New test.
	PR c++/25633
	* g++.dg/parse/ctor3.C: New test.
	PR c++/25634
	* g++.dg/template/class3.C: New test.

Added:
    trunk/gcc/testsuite/g++.dg/parse/ctor3.C
    trunk/gcc/testsuite/g++.dg/parse/dtor6.C
    trunk/gcc/testsuite/g++.dg/parse/error29.C
    trunk/gcc/testsuite/g++.dg/parse/operator6.C
    trunk/gcc/testsuite/g++.dg/template/class3.C
Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/class.c
    trunk/gcc/cp/cp-tree.h
    trunk/gcc/cp/decl.c
    trunk/gcc/cp/friend.c
    trunk/gcc/cp/parser.c
    trunk/gcc/cp/tree.c
    trunk/gcc/testsuite/ChangeLog

Comment 5 Mark Mitchell 2006-01-03 08:46:56 UTC
Fixed in 4.0.3.
Comment 6 Volker Reichelt 2006-07-19 10:50:44 UTC
The duplicate message reappeared yesterday (but not the bogus stuff).
This is tracked in PR 28432.