gcc/testsuite/g++.dg/template/class3.C
@@ -1,0 +1,2 @@
+// PR c++/25634
+template<int> template<int> struct A; // { dg-error "too many" }
